gl31-master/src/test/deca/context/invalid/sansobjet/wrong_while.deca
// Description:
//    Typage : condition int
//
// Resultats:
//    Ligne 11: un int n'est pas une condition
//
// Historique:
//    cree le 17/01/2021
{
    int a = 67;
    while(a){
        print("ok");
    }
}
